css/styles.css
body {
  background-color: #0e1820;
}

h1,
h2,
p {
  color: white;
  font-family: prompt, sans-serif;
}

select {
  color: white;
  font-family: prompt, sans-serif;
  border: none;
  background-color: #111;
  font-size: 1.3rem;
  cursor: pointer;
}

.hidden {
  display: none;
}

.selection-bar {
  background-color: #111;
}

.selection-bar > .row {
  margin-top: 2rem;
  display: flex;
  justify-content: space-evenly;
  font-family: prompt, sans-serif;
  font-size: 1rem;
}

.selection-bar > .row > h1 {
  color: white;
}

.selection-bar > .row > h1:hover {
  cursor: pointer;
}

@media screen and (max-width: 768px) {
  .selector > h1 {
    font-size: 1.5rem;
    margin-left: 35%;
    margin-right: 30%;
  }

  .agents {
    margin-left: 60%;
  }

  .selector > .row {
    display: flex;
    justify-content: center;
    font-family: prompt, sans-serif;
    background-color: #111;
    margin-top: 2rem;
  }

  .gun-column {
    margin-left: 4%;
    margin-right: 4%;
  }

  .selector {
    background-color: #111;
  }

  .column-middle {
    display: none;
  }

  .column-right {
    display: none;
  }

  .column {
    display: flex;
    flex-wrap: wrap;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 5%;
  }

  .character {
    width: calc(100%/3);
    height: 33%;
  }

  #guns {
    margin-left: 70%;
  }

  .gun {
    display: flex;
    flex-direction: column;
    align-items: center;
    border: white solid 2px;
    padding-bottom: 3%;
  }

  .weapons {
    margin-top: 2rem;
  }

  .character > img {
    width: 80%;
    height: 80%;
    border: 3px white solid;
  }

  .gun > img {
    width: 100%;
    margin-left: 10%;
    margin-right: 11%;
    margin-top: 5%;
    padding-left: 3%;
  }

  .weapons > .sheriff > img,
  .weapons > .classic > img,
  .weapons > .frenzy > img {
    width: 60%;
  }
}

@media screen and (min-width: 769px) {
  .character-info {
    display: flex;
  }

  .agents {
    margin-left: 10%;
    margin-bottom: 10%;
  }

  .column-middle > img {
    width: 150%;
    margin-left: -20%;
  }

  .selector > h1 {
    margin-left: 20%;
  }

  .selector > .row > h1 {
    font-size: 1rem;
  }

  .content > div {
    display: flex;
  }

  .column {
    display: flex;
    flex-wrap: wrap;
    flex-basis: 50%;
  }

  .column-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 3%;
    margin-top: 20%;
  }

  .column-third {
    width: 25%;
  }

  .column-middle {
    width: 40%;
  }

  .column-right {
    width: 30%;
  }

  .content {
    margin-top: 30%;
  }

  .character > img {
    width: 90%;
    border: white 2px solid;
  }

  #guns {
    margin-bottom: 2%;
    margin-left: 70%;
  }

  .gun {
    border: white 2px solid;
  }

  .gun > img {
    width: 80%;
    margin-left: 15%;
    padding-bottom: 7%;
  }

  .content > div > img {
    width: 7%;
    height: 7%;
    margin-top: 10%;
    margin-left: 3%;
  }

  .weapons > .sheriff > img,
  .weapons > .classic > img,
  .weapons > .frenzy > img {
    width: 60%;
    margin-left: 25%;
  }

  .character {
    width: 30%;
    height: 30%;
  }

  p {
    font-size: 1.2rem;
  }

  .character > p {
    margin-left: 30%;
  }

  .gun > p {
    font-size: 2rem;
    margin-left: 7%;
    margin-bottom: 6%;
  }

  .gun-column {
    display: flex;
    justify-content: center;
  }

  .weapons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }
}

